# SPDX-FileCopyrightText: 2021 Jeff Epler
#
# SPDX-License-Identifier: GPL-3.0-only

[build-system]
requires = [
    "beautifulsoup4",
    "click",
    "requests",
    "platformdirs",
    "python-dateutil",
    "leapseconddata",
    "setuptools>=68",
    "setuptools_scm[toml]>=6.0",
    "tzdata",
    "wheel",
]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
write_to = "src/wwvb/__version__.py"
[tool.ruff.lint]
select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B", "FBT", "A", "COM", "C4", "DTZ", "FA", "ISC", "ICN", "PIE", "PYI", "Q", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "C", "R", "W", "FLY", "RUF", "PL"]
ignore = ["D203", "D213", "D400", "D415", "ISC001", "E741", "C901", "PLR0911", "PLR2004", "PLR0913"]
[tool.ruff]
line-length = 120
