# SPDX-FileCopyrightText: 2021-2024 Jeff Epler
#
# SPDX-License-Identifier: GPL-3.0-only

[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"
[tool.setuptool]
package_dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}
dependencies = {file = "requirements.txt"}
[tool.setuptools_scm]
write_to = "src/wwvb/__version__.py"
[tool.ruff.lint]
select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B", "FBT", "A", "COM", "C4", "DTZ", "FA", "ISC", "ICN", "PIE", "PYI", "Q", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "C", "R", "W", "FLY", "RUF", "PL"]
ignore = ["D203", "D213", "D400", "D415", "ISC001", "E741", "C901", "PLR0911", "PLR2004", "PLR0913", "COM812"]
[tool.ruff]
line-length = 120
[project]
name = "wwvb"
authors = [{name = "Jeff Epler", email = "jepler@gmail.com"}]
description = "Generate WWVB timecodes for any desired time"
dynamic = ["readme","version","dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
[project.urls]
Source = "https://github.com/jepler/wwvbpy"
Documentation = "https://github.com/jepler/wwvbpy"
[project.scripts]
wwvbgen = "wwvb.gen:main"
wwvbdecode = "wwvb.decode:main"
dut1table = "wwvb.dut1table:main"
updateiers = "wwvb.updateiers:main"
[project.gui-scripts]
wwvbtk = "wwvb.wwvbtk:main"
