# SPDX-FileCopyrightText: 2021 Jeff Epler
#
# SPDX-License-Identifier: GPL-3.0-only

[metadata]
name = wwvb
author = Jeff Epler
author_email = jepler@gmail.com
description = Generate WWVB timecodes for any desired time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jepler/wwvbpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =.
packages = wwvb
python_requires = >=3.7
py_modules = uwwvb
install_requires =
    adafruit-circuitpython-datetime
    beautifulsoup4
    click
    platformdirs
    requests
    python-dateutil

[options.entry_points]
console_scripts =
    wwvbgen = wwvb.gen:main
    dut1table = wwvb.dut1table:main
    updateiers = wwvb.updateiers:main
gui_scripts =
    wwvbtk = wwvb.wwvbtk:main
